@@ -1843,7 +1843,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableChunker package 2289
+# TableChunker package 2364
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1853,6 +1853,9 @@ package TableChunker;
 use English qw(-no_match_vars);
 use POSIX qw(ceil);
 use List::Util qw(min max);
+use Data::Dumper;
+$Data::Dumper::Quotekeys = 0;
+$Data::Dumper::Indent    = 0;
 
 use constant MKDEBUG => $ENV{MKDEBUG};
 
@@ -2085,7 +2088,19 @@ sub get_range_statistics {
       . ") FROM " . $q->quote($db, $tbl)
       . ($where ? " WHERE $where" : '');
    MKDEBUG && _d($sql);
-   my ( $min, $max ) = $dbh->selectrow_array($sql);
+   my ( $min, $max );
+   eval {
+      ( $min, $max ) = $dbh->selectrow_array($sql);
+   };
+   if ( $EVAL_ERROR ) {
+      chomp $EVAL_ERROR;
+      if ( $EVAL_ERROR =~ m/in your SQL syntax/ ) {
+         die "$EVAL_ERROR (WHERE clause: $where)";
+      }
+      else {
+         die $EVAL_ERROR;
+      }
+   }
    $sql = "EXPLAIN SELECT * FROM " . $q->quote($db, $tbl)
       . ($where ? " WHERE $where" : '');
    MKDEBUG && _d($sql);
@@ -2122,6 +2137,8 @@ sub inject_chunks {
    my $index_hint = defined $args{index_hint}
                     ? "USE INDEX (`$args{index_hint}`)"
                     : '';
+   MKDEBUG && _d("Parameters: ",
+      Dumper({WHERE => $where, DB_TBL => $db_tbl, INDEX_HINT => $index_hint}));
    $args{query} =~ s!/\*WHERE\*/! $where!;
    $args{query} =~ s!/\*DB_TBL\*/!$db_tbl!;
    $args{query} =~ s!/\*INDEX_HINT\*/! $index_hint!;
