@@ -1,5 +1,7 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
+   * --replicate with large WHERE did not fit in boundaries column (issue 81).
+
 2008-09-19: version 1.1.29
 
    * Added --argtable, --offset and --modulo for issue 53.
